# bdii-lab1

./: .gitignore  CMakeLists.txt  README.md  datos1.txt  main.cpp  p1.cpp  p1.h  p2.cpp  p3.cpp  p4.cpp  tests.cpp
data/: datos1.txt
exercises/: p1.cpp  p1.h  p2.cpp  p2.h  p3.cpp  p3.h  p4.cpp  p4.h  util.h
headers/: p1.h  p2.h  p3.h  p4.h
source/: p1.cpp  p2.cpp  p3.cpp  p4.cpp
src/: p1.cpp  p2.cpp  p2.h  p3.cpp  p3.h  p4.cpp
test_headers/: test_P1.hpp  test_P2.hpp  test_P3.hpp  test_P4.hpp
tests/: test_P1.hpp  test_P2.hpp  test_P3.hpp  test_P4.hpp
