cmake_minimum_required(VERSION 3.17)
project(fileOrganization)

set(CMAKE_CXX_STANDARD 20)

add_executable(fileOrganization
#        p1.cpp src/p1.h tests/test_P1.hpp
#        p2.cpp src/p2.h tests/test_P2.hpp
#        p3.cpp src/p3.h  tests/test_P3.hpp
        p4.cpp src/p4.h  tests/test_P4.hpp
        )